twitter and location icons, github pages link fixed

--- a/src/index.html
+++ b/src/index.html
@@ -28,17 +28,16 @@
 
                 <img class="imgpic rounded-circle m-3 border border-3" id="git-pic"
                      src="">
-                <!--                <i id="git-pro" class="bi bi-star text-primary fs-2 "></i>-->
             </div>
             <div>
                 <p class="fs-1" id="git-name"></p>
-                <p class="fs-4" id="git-twitter"></p>
+
+                <a href="https://twitter.com" target="_blank" class="fs-4" id="git-twitter"></a>
+
                 <p class="fs-4" id="git-location"></p>
                 <p class="fs-5 text-secondary" id="git-bio"></p>
             </div>
-            <div>
 
-            </div>
 
         </div>
 
